Search field moved below header line on mobile devices to make it appear correctly on iPhones in portrait orientation.

--- a/user/themes/academydeliver/css-compiled/template.css
+++ b/user/themes/academydeliver/css-compiled/template.css
@@ -118,8 +118,10 @@ b, strong, label, th {
     #header .logo h3 {
       font-size: 1.9rem; } }
   #header .logo h3 img {
-    width: 50%;
-    height: 50%; }
+    max-height: 42px; }
+  @media only all and (max-width: 47.938em) {
+    #header .logo .search-box {
+      display: none; } }
   #header .search-box {
     display: block;
     float: right;
@@ -244,6 +246,9 @@ b, strong, label, th {
     @media only all and (max-width: 59.938em) {
       #header #navbar .panel-activation {
         display: inline-block; } }
+  @media only all and (min-width: 48em) {
+    #header #navbar .search-box {
+      display: none; } }
 
 .header-image.fullwidth #body {
   padding-left: 0;
@@ -386,8 +391,7 @@ b, strong, label, th {
     .footer .logo h3 a {
       color: #fff; }
       .footer .logo h3 a img {
-        width: 50%;
-        height: 50%; }
+        max-height: 42px; }
   .footer .quickmenu {
     margin: 0;
     padding: 0;
