--- a/user/themes/academydeliver/scss/template/_footer.scss
+++ b/user/themes/academydeliver/scss/template/_footer.scss
@@ -86,8 +86,7 @@
       h3 a {
         color: $white;
         img {
-            width: 50%;
-            height: 50%;
+            max-height: 42px;
         }
       }
     }
